
  -> TL.DR up-front conversion hints:
     - pull lightsource->ambient down to 0,0,0 (otherwise table will look 'hazy')
     - crank up lightsource->emission to 255,255,255 and tweak the color from there (to get a good contrast on the shading)
     - tweak the lightsource->height and the two emission-scales
     - revisit all physics settings, even if you used VP9Physmod(5) before (only the re-enabled friction and scatter in the physmod5 case though)
     - take a look into the new material editor and assign a material to each object on the table
     - use flashers when doing special lighting effects/night mods, otherwise try to stick with the newly redone light elements
     - revisit CommandReference.txt for all commands that have changed names/behavior, were replaced or deleted


- a special thanks has to go out to our awesome alpha testers/improvers: Unclewilly, JPSalas and JimmyFingers!


- physics mostly redone (also previously known as 'physmod(5)')
  due to this it is now also possible to enable vsync without physics sideeffects like stutter or bad aiming (set FPS limiter to 1)

  -> additional changes since physmod5, note that these will also -force- you to revisit existing physmod5 physics table settings:
     - friction is no longer ignored (e.g. it was always constant at 0.3 before) on the playfield, walls, slingshots, primitives, ramps, gates (and more?!)
     - scatter is no longer ignored for kickers and all kinds of collisions. also the global fallback behavior was changed: only if scatter < 0 then the global scatter value is used
     - collision heuristics are adapted for all ball sizes (e.g. different from the default radius of 25), so it should be safer to use strange ball sizes now
       (note: remember to always also tweak the ball mass if changing the ball radius (the kicker now supports CreateSizedBallWithMass),